--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,41 +1,3 @@
 {
-	"compilerOptions": {
-		"types": [
-			"jest",
-			"node"
-		],
-		"target": "esnext",
-		"module": "esnext",
-		"strict": true,
-		"resolveJsonModule": true,
-		"useDefineForClassFields": true,
-		"jsx": "preserve",
-		"isolatedModules": true,
-		"importHelpers": true,
-		"moduleResolution": "node",
-		"skipLibCheck": true,
-		"esModuleInterop": true,
-		"allowSyntheticDefaultImports": true,
-		"sourceMap": true,
-		"baseUrl": ".",
-		"paths": {
-			"@/*": [
-				"./*"
-			]
-		},
-		"lib": [
-			"esnext",
-			"dom",
-			"dom.iterable",
-			"scripthost"
-		]
-	},
-	"include": [
-		"src/**/*.ts",
-		"src/**/*.tsx",
-		"src/**/*.vue",
-	],
-	"exclude": [
-		"node_modules"
-	]
+	"extends": "../../tsconfig.json",
 }
